# etna-cli

./: LICENSE  README.md  pyproject.toml
docs/: README.md  conf.py  index.rst  requirements.txt
docs/api/: api.rst
docs/commands/: etna.rst
docs/usage/: quickstart.rst
etna_cli/: activity.py  config.py  conversation.py  declaration.py  etna.py  etna_gitlab.py  event.py  project.py  rank.py  student.py  task.py  ticket.py  utils.py
